--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -1,9 +1,30 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
+@using System.IO;
+@using Projet_Web_Commerce.Data
 
+@inject AuthDbContext _context
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
+@{
+    var background = "#ECEBF3";
+}
+@if (ViewBag.Current != null)
+{
+    @if (SignInManager.IsSignedIn(User))
+    {
+        string nom = ViewBag.Current;
+        var vendeur = _context.PPVendeurs.Where(v => v.NomAffaires == nom).FirstOrDefault();
+        var config = vendeur.Configuration;
 
+        if (config != null)
+        {
+            var listParams = config.Split(';');
+
+            background = listParams[1];
+        }
+    }
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -20,7 +41,6 @@
         }
 
         .container-custom{
-            background-color: rgb(236, 235, 243);
             width: 100%;
             height: 100%;
             min-width: 75%; 
@@ -32,7 +52,7 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(236, 235, 243)">
+<body style="background-color: @background">
     <header>
         <nav class="navbar navbar-custom navbar-expand-sm navbar-toggleable-sm navbar-light bg-customMauve border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -58,6 +78,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="PPProduits" asp-action="ListePanier">Mes Paniers</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="Personnaliser" asp-action="Index">Presonnaliser votre page</a>
+
+                            </li>
                         }
 
                         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Gestionnaire"))
@@ -77,11 +101,11 @@
         </nav>
     </header>
     <div class="container-custom H-100">
-        <main role="main" class="pb-3">
+        <main role="main" style="background-color:@background" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    <footer class="container-custom H-100" style="background-color: rgb(236, 235, 243)">
+    <footer class="container-custom H-100" style="background-color: @background">
         &copy; 2024 - Projet_Web_Commerce - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </footer>
 
