--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -2,6 +2,8 @@
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> _userManager
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @model Projet_Web_Commerce.Models.PPProduits
+@using System.IO
+@inject IWebHostEnvironment env
 @{
     ViewData["Title"] = "Details";
     var user = await _userManager.GetUserAsync(User);
@@ -12,6 +14,9 @@
 @if (!SignInManager.IsSignedIn(User) )
 {
     Console.WriteLine("yes");
+    <div class="alert alert-warning" role="alert">
+        Vous devez vous connecter avant de pouvoir voir les détails.
+    </div>
     <text>
         <script>
             debugger;
@@ -30,8 +35,16 @@ else
             <dt class="col-sm-2">
                 Photo de l’article :
             </dt>
+            @{
+                var path = System.IO.Path.Combine(env.WebRootPath, "Logo", Model.Photo);
+                string imagePath = Model.Photo != null && File.Exists(path) ? $"~/Logo/{Model.Photo}" : "~/Logo/DefaultImage.png";
+                Console.WriteLine("FILE Name : " + Model.Photo);
+                Console.WriteLine("FILE : " + File.Exists(path));
+            }
+
+            
             <dd class="col-sm-10">
-                <img src="~/Logo/@(Model.Photo)" alt="@(Model.Photo)" width="140" height="200" />
+                <img src="@Url.Content(imagePath)" alt="@Model.Photo" width="140" height="200" />
             </dd>
 
             <dt class="col-sm-2">
@@ -129,7 +142,8 @@ else
     <div>
         @if ( !User.IsInRole("Vendeur") && vendeur != null)
         {
-            <a asp-controller="MainMenu" asp-route-id="@vendeur"  asp-action="CatalogueVendeur">Retour au catalogue du vendeur</a>
+            <a asp-controller="MainMenu" asp-route-nomAffaire="@vendeur" asp-action="CatalogueVendeur">Retour au catalogue du vendeur</a>
+
         }
         else
         {
